--- a/BarBot/iOS/BarBot.iOS.csproj
+++ b/BarBot/iOS/BarBot.iOS.csproj
@@ -147,7 +147,7 @@
     <Compile Include="View\Menu\MenuSource.cs" />
     <Compile Include="View\Menu\DrinkCell.cs" />
     <Compile Include="View\Detail\DrinkDetailViewController.cs" />
-    <Compile Include="IosWebsocketHandler.cs" />
+    <Compile Include="IosWebSocketHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Microsoft-Yi-Baiti.ttf" />
