--- a/BarBot/BarBot.UWP/project.json
+++ b/BarBot/BarBot.UWP/project.json
@@ -3,6 +3,7 @@
     "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0",
     "Microsoft.EntityFrameworkCore.Tools": "1.1.0-preview4-final",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "MvvmLightLibs": "5.3.0",
     "Newtonsoft.Json": "9.0.1",
     "SQLite.Net-PCL": "3.1.1",
     "Websockets.Pcl": "1.1.9"
